# nwn_parser

./: Cargo.toml  LICENSE  README.md  build-windows.sh  main.rs  main_backup.rs  players.json  settings.json  test_attack_matching  test_damage_issue.txt  test_damage_matching  test_exclusive_damage_types.txt  test_fifo_matching  test_full_scenario  test_immunity.sh  test_immunity_logs.txt  test_immunity_main.rs  test_log.txt  test_missile_storm.txt  test_missile_storm_with_attacks.txt  test_multiple_spells_multiple_targets.txt  test_parsing.rs  test_player_detection.txt  test_regex_matching.rs  test_timestamp_parsing  verify_fix
logs/: nwclientLog1.txt
src/: lib.rs  main.rs  test.rs
src/gui/: app.rs  buff_window.rs  helpers.rs  logs_window.rs  mod.rs  player_details_window.rs  ui.rs
src/log/: finder.rs  mod.rs  watcher.rs
src/models/: buffs.rs  context.rs  encounter.rs  mod.rs  player.rs  settings.rs  stats.rs
src/parsing/: line_parser.rs  mod.rs  processor.rs  regex.rs
src/utils/: mod.rs  player_persistence.rs  settings_persistence.rs  time.rs
