[package]
name = "nwn_parser"
version = "0.1.0"
edition = "2024"
default-run = "nwn_parser"

[lib]
name = "nwn_parser"
path = "src/lib.rs"

[[bin]]
name = "nwn_parser"
path = "src/main.rs"

[dependencies]
eframe = "0.32.0"
lazy_static = "1.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
